tests/bad_reserved_name_field.stderr
tests/bad_reserved_name_field.hop:3:2: error: HOP2008: identifier prefix '__hop_' is reserved
tests/bad_reserved_name_field.hop:3:2: hint: HOP2008: rename symbol to avoid '__hop_' prefix
