tests/bad_reserved_name_field.hop
// Verifies bad reserved name field.
struct S {
	__hop_bad i32
}
